hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: image-registry.openshift-image-registry.svc:5000/hackthon/autodevops:latest
        ports:
        - containerPort: 8084
